Bug 143837 - Skia: Curve rendering broken with fat stroke
Summary: Skia: Curve rendering broken with fat stroke
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.1.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-08-12 10:55 UTC by Regina Henschel
Modified: 2021-11-20 20:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Some curves to examine (9.09 KB, application/vnd.oasis.opendocument.graphics)
2021-08-12 10:55 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-08-12 10:55:03 UTC
Created attachment 174223 [details]
Some curves to examine

Make sure you use Skia for rendering.
Open attached document. Select the shapes and change their line width from 0 to e.g. 0.5mm. Notice that the curve is now rendered as straight line.

It is OK in Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4db18506b43a63af36767d609a762f8d2e3b7634
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: threaded

I see it broken in Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4db18506b43a63af36767d609a762f8d2e3b7634
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: threaded

So it is a problem with Skia.
Comment 1 Roman Kuznetsov 2021-08-15 08:37:46 UTC
Confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4677345e3695bac158bb04048b4d5c608ed764b4
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

and in

Version: 7.1.1.2 (x64) / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL
Comment 2 Commit Notification 2021-11-18 07:02:25 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e6e45eb4247bf8bd57d157b44f49577dde38716

handle also curved lines for nojoin skia polylines (tdf#143837)

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Roman Kuznetsov 2021-11-20 20:14:00 UTC
Verified in

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 214fa233338c09156c67f85818b6a2ea6b3235bd
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

Luboš , thank you for fixing!