handle also curved lines for nojoin skia polylines (tdf#143837)

Change-Id: I2f5aa12eb656f6b337843d81a2a30de277dff7b7